<resources>
    <string name="app_name">Photo Gallery</string>
    <string name="grant_storage_permission">Grant storage permission</string>
    <string name="photos">Photos</string>
    <string name="albums">Albums</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="grid_picture">grid-picture</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="select_items">Select items</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="reload_from_disk">Reload from disk</string>
    <string name="new_folder">New Folder</string>
    <string name="share_images_to">"Share images to.."</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_want_to_delete">Are you sure want to delete?</string>
    <string name="alert">Alert!</string>
    <string name="ask_storage_permission_message">Allow Photo Gallery access to show your photos</string>
    <string name="allow">Allow</string>
    <string name="file"> file</string>
    <string name="files"> files</string>
    <string name="invite_friends">Invite friends</string>
    <string name="give_feedback">Give us feedback</string>
    <string name="rate_us">Rate us</string>
    <string name="about_us">About us</string>
    <string name="select_all">Select all</string>
    <string name="move_to_folder">Move to folder</string>
    <string name="copy_to_folder">Copy to folder</string>

    <string-array name="memory_unit">
        <item> KB</item>
        <item> MB</item>
        <item> GB</item>
    </string-array>
    <string name="file_deleted_mess">File deleted successfully</string>
    <string name="could_not_deleted_file_mess">File couldn\'t be deleted</string>
    <string name="info">Info</string>
    <string name="details">Details</string>
    <string name="change_your_password">Change your password</string>
    <string name="hide_file_complete_mess">Hide files done! Please delete the file to ensure security</string>
    <string name="enter_folder_name_message">Enter your folder name</string>
    <string name="create_folder">Create folder</string>
    <string name="folder_name">Folder name</string>

</resources>