<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mnu_delete"
        android:icon="@drawable/ic_baseline_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/mnu_share"
        android:icon="@drawable/ic_baseline_share"
        android:title="@string/share"
        app:showAsAction="always"/>
    <item
        android:id="@+id/mnu_select_all"
        android:title="@string/select_all"
        />
    <item
        android:id="@+id/mnu_move_folder"
        android:title="@string/move_to_folder"
        />
    <item
        android:id="@+id/mnu_copy_folder"
        android:title="@string/copy_to_folder"
        />
</menu>