<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.82"
        android:background="@drawable/bg_radius_12"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:text="@string/new_folder"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/text_light"
            android:layout_marginTop="@dimen/space_screen_normal"
            android:textSize="@dimen/text_size_16"
            android:fontFamily="@font/inter_semibold_600"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_folder_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/folder_name"
            app:boxStrokeColor="@color/blue_500"
            app:hintTextColor="@color/blue_500"
            android:layout_marginHorizontal="@dimen/space_screen_normal"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/space_screen_normal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_folder_name"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_screen_normal"
            android:layout_marginBottom="@dimen/space_screen_normal"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/til_folder_name"
            app:layout_constraintStart_toStartOf="@id/til_folder_name"
            app:layout_constraintTop_toBottomOf="@id/til_folder_name">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:fontFamily="@font/inter_medium_500"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/text_light" />

            <TextView
                android:id="@+id/tv_create"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_save"
                android:fontFamily="@font/inter_medium_500"
                android:gravity="center"
                android:text="@string/create_folder"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>