<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_radius_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.82">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_screen_normal"
            android:layout_marginTop="@dimen/space_screen_normal"
            android:fontFamily="@font/inter_semibold_600"
            android:text="@string/app_name"
            android:textColor="@color/text_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edName"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/space_screen_small"
            android:background="@drawable/bg_edit_text"
            android:drawableEnd="@drawable/ic_pen"
            android:paddingStart="8dp"
            android:fontFamily="@font/inter_regular_400"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/text_light"
            android:paddingEnd="8dp"
            app:layout_constraintDimensionRatio="248:40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_title"
            app:layout_constraintWidth_percent="0.84" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_screen_normal"
            android:layout_marginBottom="@dimen/space_screen_normal"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/edName"
            app:layout_constraintStart_toStartOf="@id/edName"
            app:layout_constraintTop_toBottomOf="@id/edName">

            <TextView
                android:id="@+id/txt_cancel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:fontFamily="@font/inter_medium_500"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/text_light" />

            <TextView
                android:id="@+id/txt_confirm"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_save"
                android:fontFamily="@font/inter_medium_500"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>