<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:title="@string/app_name" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/ll_app_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_screen_small"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/space_screen_small"
            app:layout_constraintTop_toBottomOf="@id/app_bar">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_folder" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_screen_normal"
            app:layout_constraintTop_toBottomOf="@+id/ll_app_icon">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/space_screen_small">

                <LinearLayout
                    android:id="@+id/ll_invite_friends"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:minHeight="70dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/space_screen_small">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter_medium_500"
                        android:text="@string/invite_friends"
                        android:textColor="@color/text_light" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_friends"
                        app:tint="@color/grey_700" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="@dimen/space_screen_small"
                    android:background="@color/grey_500" />

                <LinearLayout
                    android:id="@+id/ll_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:minHeight="70dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/space_screen_small">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter_medium_500"
                        android:text="@string/give_feedback"
                        android:textColor="@color/text_light" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_feedback"
                        app:tint="@color/grey_700" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="@dimen/space_screen_small"
                    android:background="@color/grey_500" />

                <LinearLayout
                    android:id="@+id/ll_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:minHeight="70dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/space_screen_small">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter_medium_500"
                        android:text="@string/rate_us"
                        android:textColor="@color/text_light" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_star"
                        app:tint="@color/grey_700" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="@dimen/space_screen_small"
                    android:background="@color/grey_500" />

                <LinearLayout
                    android:id="@+id/ll_about_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:minHeight="70dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/space_screen_small">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter_medium_500"
                        android:text="@string/about_us"
                        android:textColor="@color/text_light" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_info"
                        app:tint="@color/grey_700" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="@dimen/space_screen_small"
                    android:background="@color/grey_500" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>